# opencode_py

./: .env.example  .gitignore  GIT_COMMIT_REPORT.md  LLM_CONFIG_GUIDE.md  LLM_CONFIG_SETUP_REPORT.md  LLM_CONFIG_VERIFICATION.md  MIGRATION.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_SUMMARY.md  README.md  RESTRUCTURE_REPORT.md  SESSION_AGENT_TRANSLATION.md  __init__.py  llm_config.py  pyproject.toml
acp/: __init__.py  acp.py
agent/: __init__.py  agent.py
agent/prompt/: summary.txt
bus/: __init__.py
cli/: __init__.py  main.py
config/: __init__.py  config.py
file/: __init__.py  file.py
format/: __init__.py
id/: __init__.py
lsp/: __init__.py  lsp.py
mcp/: __init__.py  mcp.py
opencode/: __init__.py  llm_config.py
opencode/acp/: __init__.py  acp.py
opencode/agent/: __init__.py  agent.py
opencode/cli/: __init__.py  main.py
opencode/config/: __init__.py  config.py
opencode/file/: __init__.py
opencode/format/: __init__.py  format.py
opencode/global/: __init__.py
opencode/id/: __init__.py  id.py
opencode/lsp/: __init__.py
opencode/mcp/: __init__.py
permission/: __init__.py  permission.py
project/: __init__.py
provider/: __init__.py  provider.py
server/: __init__.py
session/: __init__.py  manager.py  message_v2.py  models.py  prompt.py
shell/: __init__.py  shell.py
store/: __init__.py  db.py  migration.py  storage.py
tests/: __init__.py  err  opencode_usage_guide.md  test_modules.py
tool/: __init__.py  bash.py  edit.py  exit.py  lsp.py  read.py  search.py  test_tools.py  tool.py  web.py  write.py
util/: __init__.py
(+55 files in other folders)
