[project]
name = "opencode"
version = "0.1.0"
description = "AI-powered coding assistant - Python port of opencode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "watchdog>=4.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "websockets>=12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.4.0"]

[project.scripts]
opencode = "opencode.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
